k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bpm-scrape
  labels:
    app: bpm-scrape
