k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bpm-scrape-service
  namespace: bpm-scrape
  labels:
    app: bpm-scrape
spec:
  type: ClusterIP
  ports:
  - port: 5000
    targetPort: 5000
    protocol: TCP
    name: http
  selector:
    app: bpm-scrape
